--- a/Framework/index.html
+++ b/Framework/index.html
@@ -8,6 +8,11 @@
 
   <script src="scripts/jquery-2.2.3.min.js"></script>
   <script src="scripts/angular.min.js"></script>
+
+  <script src="ext-modules/psMenu/psMenuModule.js"></script>
+  <script src="ext-modules/psDashboard/psDashboardModule.js"></script>
+  <script src="ext-modules/psFramework/psFrameworkModule.js"></script>
+  <script src="app/appModule.js"></script>
 </head>
 <body>
 
