--- a/Framework/index.html
+++ b/Framework/index.html
@@ -1,10 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Darkwater Adventures</title>
+  <meta charset="utf-8" />
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="Content/bootstrap.min.css" rel="stylesheet" />
   <link href="Content/font-awesome.min.css" rel="stylesheet" />
+  <link href="app/app.css" rel="stylesheet" />
+  <link href="ext-modules/psFramework/psFramework.css" rel="stylesheet" />
 
   <script src="scripts/jquery-2.2.3.min.js"></script>
   <script src="scripts/angular.min.js"></script>
@@ -12,9 +16,13 @@
   <script src="ext-modules/psMenu/psMenuModule.js"></script>
   <script src="ext-modules/psDashboard/psDashboardModule.js"></script>
   <script src="ext-modules/psFramework/psFrameworkModule.js"></script>
+  <script src="ext-modules/psFramework/psFrameworkController.js"></script>
+  <script src="ext-modules/psFramework/psFrameworkDirective.js"></script>
   <script src="app/appModule.js"></script>
 </head>
-<body>
-
+<body class="container-fluid">
+  <ps-framework title="Darkwater Adventures"
+                subtitle="Administrative Application"
+                icon-file="/images/photo.jpg"></ps-framework>
 </body>
 </html>
