completed 3.7 specifying the icons

--- a/Framework/ext-modules/psMenu/psMenuItemTemplate.html
+++ b/Framework/ext-modules/psMenu/psMenuItemTemplate.html
@@ -1,1 +1,6 @@
-﻿<li class="ps-selectable-item ps-noselect">{{label}}</li>
+﻿<li class="ps-selectable-item">
+  <div class="ps-noselect">
+    <i class="fa {{icon}} ps-menu-icon"></i>
+    {{label}}
+  </div>
+</li>
