--- a/Framework/index.html
+++ b/Framework/index.html
@@ -33,9 +33,9 @@
                 subtitle="Administrative Application"
                 icon-file="/images/photo.jpg">
     <ps-menu>
-      <ps-menu-item label="Dashboard"></ps-menu-item>
-      <ps-menu-item label="Location"></ps-menu-item>
-      <ps-menu-item label="Raft Guides"></ps-menu-item>
+      <ps-menu-item label="Dashboard" icon="fa-dashboard"></ps-menu-item>
+      <ps-menu-item label="Location" icon="fa-location-arrow"></ps-menu-item>
+      <ps-menu-item label="Raft Guides" icon="fa-user"></ps-menu-item>
     </ps-menu>
   </ps-framework>
 </body>
