--- a/Framework/index.html
+++ b/Framework/index.html
@@ -18,6 +18,7 @@
   <script src="ext-modules/psMenu/psMenuController.js"></script>
   <script src="ext-modules/psMenu/psMenuDirective.js"></script>
   <script src="ext-modules/psMenu/psMenuItemDirective.js"></script>
+  <script src="ext-modules/psMenu/psMenuGroupDirective.js"></script>
 
   <script src="ext-modules/psDashboard/psDashboardModule.js"></script>
 
@@ -36,6 +37,11 @@
       <ps-menu-item label="Dashboard" icon="fa-dashboard" route="dashboard"></ps-menu-item>
       <ps-menu-item label="Location" icon="fa-location-arrow" route="location"></ps-menu-item>
       <ps-menu-item label="Raft Guides" icon="fa-user" route="guide"></ps-menu-item>
+      <ps-menu-group label="Equipments" icon="fa-gears">
+        <ps-menu-item label="Rafts" icon="fa-unlink" route="rafts"></ps-menu-item>
+        <ps-menu-item label="Paddles" icon="fa-magic" route="paddles"></ps-menu-item>
+        <ps-menu-item label="Life Vests" icon="fa-life-ring" route="vests"></ps-menu-item>
+      </ps-menu-group>
     </ps-menu>
   </ps-framework>
 </body>
