i hate it, iis express stops if I stop VS Enable/Edit feature is not available

--- a/Framework/index.html
+++ b/Framework/index.html
@@ -30,7 +30,7 @@
   <script src="app/appConfig.js"></script>
 </head>
 <body class="container-fluid">
-  <ps-framework title="Darkwater Adventures"
+  <ps-framework title="Darkwater Adventures Works"
                 subtitle="Administrative Application"
                 icon-file="/images/photo.jpg">
     <ps-menu>
