--- a/Framework/ext-modules/psMenu/psMenuTemplate.html
+++ b/Framework/ext-modules/psMenu/psMenuTemplate.html
@@ -1,6 +1,7 @@
-﻿<div class="ps-menu-area" ng-show="showMenu">
+﻿<div class="ps-menu-area" ng-show="showMenu"
+     ng-class="{'ps-menu-area-vertical':isVertical,'ps-menu-area-horizontal':!isVertical}">
   <ul ng-transclude class="ps-menu"></ul>
   <a class="btn ps-menu-layout-button" ng-click="toggleMenuOrientation()">
-    <i class="fa fa-chevron-up"></i>
+    <i class="fa" ng-class="{'fa-chevron-up':isVertical,'fa-chevron-left':!isVertical}"></i>
   </a>
 </div>
