--- a/Framework/ext-modules/psMenu/psMenuGroupTemplate.html
+++ b/Framework/ext-modules/psMenu/psMenuGroupTemplate.html
@@ -4,8 +4,8 @@
     {{label}}
   </div>
   <i ng-class="{'fa-rotate-270':isOpen}" ng-if="isVertical()"
-     class="fa fa-chevron-left ps-group-indicator-left" ></i>
+     class="fa fa-chevron-left ps-group-indicator-left"></i>
 </li>
-<div ng-show="isOpen" class="ps-subitem-section">
+<div ng-show="isOpen" class="ps-subitem-section" ng-class="{'ps-pop-up-menu':!isVertical()}">
   <ul ng-transclude />
 </div>
