--- a/Framework/index.html
+++ b/Framework/index.html
@@ -13,6 +13,7 @@
 
   <script src="scripts/jquery-2.2.3.min.js"></script>
   <script src="scripts/angular.min.js"></script>
+  <script src="scripts/angular-animate.min.js"></script>
 
   <script src="ext-modules/psMenu/psMenuModule.js"></script>
   <script src="ext-modules/psMenu/psMenuController.js"></script>
