--- a/Framework/index.html
+++ b/Framework/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Darkwater Adventures</title>
   <meta charset="utf-8" />
+  <!--<base href="/index.html" />-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="Content/bootstrap.min.css" rel="stylesheet" />
   <link href="Content/font-awesome.min.css" rel="stylesheet" />
@@ -14,6 +15,7 @@
   <script src="scripts/jquery-2.2.3.min.js"></script>
   <script src="scripts/angular.min.js"></script>
   <script src="scripts/angular-animate.min.js"></script>
+  <script src="scripts/angular-route.min.js"></script>
 
   <script src="ext-modules/psMenu/psMenuModule.js"></script>
   <script src="ext-modules/psMenu/psMenuController.js"></script>
@@ -23,12 +25,15 @@
 
   <script src="ext-modules/psDashboard/psDashboardModule.js"></script>
 
-
   <script src="ext-modules/psFramework/psFrameworkModule.js"></script>
   <script src="ext-modules/psFramework/psFrameworkController.js"></script>
   <script src="ext-modules/psFramework/psFrameworkDirective.js"></script>
   <script src="app/appModule.js"></script>
   <script src="app/appConfig.js"></script>
+  <script src="app/appRouteConfig.js"></script>
+  <script src="app/directives/dwaDashboardDirective.js"></script>
+  <script src="app/directives/dwaGuidesDirective.js"></script>
+  <script src="app/directives/dwaLocationsDirective.js"></script>
 </head>
 <body class="container-fluid">
   <ps-framework title="Darkwater Adventures Works"
@@ -36,8 +41,8 @@
                 icon-file="/images/photo.jpg">
     <ps-menu>
       <ps-menu-item label="Dashboard" icon="fa-dashboard" route="dashboard"></ps-menu-item>
-      <ps-menu-item label="Location" icon="fa-location-arrow" route="location"></ps-menu-item>
-      <ps-menu-item label="Raft Guides" icon="fa-user" route="guide"></ps-menu-item>
+      <ps-menu-item label="Location" icon="fa-location-arrow" route="locations"></ps-menu-item>
+      <ps-menu-item label="Raft Guides" icon="fa-user" route="guides"></ps-menu-item>
       <ps-menu-group label="Equipments" icon="fa-gears">
         <ps-menu-item label="Rafts" icon="fa-unlink" route="rafts"></ps-menu-item>
         <ps-menu-item label="Paddles" icon="fa-magic" route="paddles"></ps-menu-item>
