--- a/Framework/index.html
+++ b/Framework/index.html
@@ -8,14 +8,17 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link href="Content/bootstrap.min.css" rel="stylesheet" />
   <link href="Content/font-awesome.min.css" rel="stylesheet" />
+  <link href="Content/angular-gridster.min.css" rel="stylesheet" />
   <link href="app/app.css" rel="stylesheet" />
   <link href="ext-modules/psFramework/psFramework.css" rel="stylesheet" />
   <link href="ext-modules/psMenu/psMenu.css" rel="stylesheet" />
+  <link href="ext-modules/psDashboard/psDashboard.css" rel="stylesheet" />
 
   <script src="scripts/jquery-2.2.3.min.js"></script>
   <script src="scripts/angular.min.js"></script>
   <script src="scripts/angular-animate.min.js"></script>
   <script src="scripts/angular-route.min.js"></script>
+  <script src="scripts/angular-gridster.min.js"></script>
 
   <script src="ext-modules/psMenu/psMenuModule.js"></script>
   <script src="ext-modules/psMenu/psMenuController.js"></script>
@@ -24,6 +27,7 @@
   <script src="ext-modules/psMenu/psMenuGroupDirective.js"></script>
 
   <script src="ext-modules/psDashboard/psDashboardModule.js"></script>
+  <script src="ext-modules/psDashboard/psDashboardDirective.js"></script>
 
   <script src="ext-modules/psFramework/psFrameworkModule.js"></script>
   <script src="ext-modules/psFramework/psFrameworkController.js"></script>
