--- a/Framework/ext-modules/psDashboard/psDashboardTemplate.html
+++ b/Framework/ext-modules/psDashboard/psDashboardTemplate.html
@@ -1,8 +1,12 @@
-﻿<div gridster="gridsterOpts">
+﻿<div class="ps-dashboard-header">
+  {{title}}
+</div>
+
+<div gridster="gridsterOpts">
   <ul>
     <li gridster-item="item" ng-repeat="item in widgets">
       <div class="ps-widget-header">
-        <span>{{item.title}}</span>
+        <span class="ps-noselect" style="cursor:default">{{item.title}}</span>
         <div class="ps-widget-header-buttons">
           <button class="btn btn-default pull-right">
             <i class="fa fa-remove"></i>
