--- a/Framework/index.html
+++ b/Framework/index.html
@@ -35,6 +35,8 @@
   <script src="app/appModule.js"></script>
   <script src="app/appConfig.js"></script>
   <script src="app/appRouteConfig.js"></script>
+  <script src="app/services/dataService.js"></script>
+
   <script src="app/directives/dwaDashboardDirective.js"></script>
   <script src="app/directives/dwaGuidesDirective.js"></script>
   <script src="app/directives/dwaLocationsDirective.js"></script>
