starting 6.4  creating widget custom directives

--- a/Framework/index.html
+++ b/Framework/index.html
@@ -36,6 +36,7 @@
   <script src="app/appConfig.js"></script>
   <script src="app/appRouteConfig.js"></script>
   <script src="app/services/dataService.js"></script>
+  <script src="app/services/dataService.js"></script>
 
   <script src="app/directives/dwaDashboardDirective.js"></script>
   <script src="app/directives/dwaGuidesDirective.js"></script>
